a lot on article loading

--- a/modules/site/assets/css/style.css
+++ b/modules/site/assets/css/style.css
@@ -216,6 +216,7 @@ body.accounts_search .article .left img {
 .actions ul li a {
   font-size: 1.4em;
   color: #777;
+  cursor: pointer;
 }
 .article .account,
 .article .description, 
